--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8" />
-  <title>MinPris</title>
+  <title>MinPris – tilbudskalkulator</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 30px auto;
-      padding: 20px;
+      background: #f5f5f5;
+      padding: 30px;
+    }
+
+    h1 {
+      margin-bottom: 20px;
     }
 
     input, textarea, button {
@@ -26,91 +30,91 @@
     }
 
     button:hover {
-      opacity: 0.85;
+      opacity: 0.8;
     }
 
-    h2 {
-      margin-top: 30px;
+    .box {
+      background: white;
+      padding: 20px;
+      border-radius: 6px;
+      max-width: 600px;
     }
 
     #resultat {
       margin-top: 20px;
-      white-space: pre-wrap;
-      background: #f4f4f4;
       padding: 10px;
+      background: #eee;
     }
   </style>
 </head>
 <body>
 
-<h1>MinPris – tilbudskalkulator</h1>
+  <div class="box">
+    <h1>MinPris – tilbudskalkulator</h1>
 
-<textarea id="tekst" placeholder="Beskrivelse av jobben"></textarea>
+    <textarea id="beskrivelse" placeholder="Beskrivelse av jobben"></textarea>
 
-<input id="timer" placeholder="Timer">
-<input id="dager" placeholder="Dager">
-<input id="arbeid" placeholder="Arbeid (kr)">
-<input id="kjøring" placeholder="Kjøring (kr)">
-<input id="forbruk" placeholder="Forbruk (kr)">
-<input id="avfall" placeholder="Avfall (kr)">
-<input id="total" placeholder="Totalpris (kr)">
+    <input id="timer" type="number" placeholder="Timer">
+    <input id="dager" type="number" placeholder="Dager">
+    <input id="arbeid" type="number" placeholder="Arbeid (kr)">
+    <input id="kjoring" type="number" placeholder="Kjøring (kr)">
+    <input id="forbruk" type="number" placeholder="Forbruk (kr)">
+    <input id="avfall" type="number" placeholder="Avfall (kr)">
 
-<button onclick="generer()">Generer tilbudstekst</button>
-<button onclick="lastNedPDF()">Last ned PDF</button>
+    <button onclick="beregn()">Beregn</button>
+    <button onclick="lagTilbud()">Generer tilbudstekst</button>
+    <button onclick="lastNedPDF()">Last ned PDF</button>
 
-<h2>Resultat</h2>
-<pre id="resultat"></pre>
+    <div id="resultat"></div>
+  </div>
 
-<script>
-async function generer() {
-  try {
-    const res = await fetch("/api/ai", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        tekst: tekst.value,
-        timer: timer.value,
-        dager: dager.value,
-        arbeid: arbeid.value,
-        kjøring: kjøring.value,
-        forbruk: forbruk.value,
-        avfall: avfall.value,
-        total: total.value
-      })
-    });
+  <script>
+    function beregn() {
+      const arbeid = Number(document.getElementById("arbeid").value || 0);
+      const kjoring = Number(document.getElementById("kjoring").value || 0);
+      const forbruk = Number(document.getElementById("forbruk").value || 0);
+      const avfall = Number(document.getElementById("avfall").value || 0);
 
-    const data = await res.json();
-    document.getElementById("resultat").innerText = data.text;
-  } catch (err) {
-    alert("Feil ved generering av tekst");
-  }
-}
+      const total = arbeid + kjoring + forbruk + avfall;
 
-async function lastNedPDF() {
-  try {
-    const res = await fetch("/api/pdf", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        tekst: tekst.value,
-        timer: timer.value,
-        dager: dager.value,
-        arbeid: arbeid.value,
-        kjøring: kjøring.value,
-        forbruk: forbruk.value,
-        avfall: avfall.value,
-        total: total.value
-      })
-    });
+      document.getElementById("resultat").innerHTML =
+        "<strong>Totalpris:</strong> " + total + " kr";
+    }
 
-    const blob = await res.blob();
-    const url = URL.createObjectURL(blob);
-    window.open(url);
-  } catch (err) {
-    alert("Feil ved PDF");
-  }
-}
-</script>
+    function lagTilbud() {
+      const tekst = `
+Tilbud:
+
+Beskrivelse:
+${document.getElementById("beskrivelse").value}
+
+Timer: ${document.getElementById("timer").value}
+Dager: ${document.getElementById("dager").value}
+
+Arbeid: ${document.getElementById("arbeid").value} kr
+Kjøring: ${document.getElementById("kjoring").value} kr
+Forbruk: ${document.getElementById("forbruk").value} kr
+Avfall: ${document.getElementById("avfall").value} kr
+`;
+
+      document.getElementById("resultat").innerText = tekst;
+    }
+
+    function lastNedPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+
+      const tekst = document.getElementById("resultat").innerText;
+
+      if (!tekst) {
+        alert("Generer tilbud først!");
+        return;
+      }
+
+      doc.text(tekst, 10, 10);
+      doc.save("tilbud.pdf");
+    }
+  </script>
 
 </body>
 </html>
